--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "jpka-smart-post",
+  "name": "smart-post",
   "version": "0.0.0",
-  "main": "component.html",
+  "main": "index.html",
   "ignore": [
     "**/.*",
     "node_modules",
