Now it does something

--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "directories": {
     "test": "test"
   },
-  "dependencies": {},
+  "dependencies": {
+    "marked": "~0.2.9"
+  },
   "devDependencies": {
     "karma": "~0.8.5",
     "js-fixtures": "~1.2.0",
     "Polymer": "git://github.com/Polymer/polymer.git",
-    "chai": "~1.6.0"
+    "chai": "~1.6.0",
+    "grunt": "~0.4.1",
+    "grunt-replace": "~0.4.4",
+    "grunt-contrib-watch": "~0.4.4",
+    "browserify": "~2.18.1"
   },
   "scripts": {
     "test": "node_modules/.bin/karma start"
