--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/jpka/smart-post"
+    "url": "git://github.com/jpka/smart-post.git"
   },
   "author": "Juan Pablo Kaniefsky",
   "license": "MIT"
